--- a/style.css
+++ b/style.css
@@ -185,8 +185,8 @@ footer p { font-size:0.9rem; }
 @media (max-width: 768px) {
   .topnav {
     flex-direction: row !important;
-    justify-content: right !important;
-    align-items: flex-start !important;
+    justify-content: flex-start !important;
+    align-items: center !important;
     padding: 0.5rem 5% !important;
     overflow-x: hidden !important;
   }
